<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="26dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/app_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#1559AC"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/Numero1"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/input1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/Numero2"
        android:layout_width="235dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numero1"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/operaciones"
        android:layout_width="285dp"
        android:layout_height="156dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resultado">

        <RadioButton
            android:id="@+id/Suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_suma" />

        <RadioButton
            android:id="@+id/Resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_resta" />

        <RadioButton
            android:id="@+id/Producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_multiplicacion" />

        <RadioButton
            android:id="@+id/Dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_divicion" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="Operar"
        android:text="@string/boton_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operaciones" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="335dp"
        android:layout_height="35dp"
        android:layout_marginTop="48dp"
        android:text="@string/result_output"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numero2" />

</androidx.constraintlayout.widget.ConstraintLayout>